--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cached_network_image: ^3.0.0
   sqflite: ^2.0.0+3
   path: ^1.8.0
+  webview_flutter: ^4.8.0
 
 
 dev_dependencies:
